[package]
name = "warp-iiif"
version = "0.1.0"
authors = ["JW <Weberju5@gmail.com>"]
edition = "2018"

[dependencies]
warp = { version = "0.3.0", features = ["tls", "compression"] }
tokio = { version = "1.2.0", features = ["full"] }

log = "0.4"
pretty_env_logger = "0.4"

serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.59"
image = "0.23.13"
percent-encoding = "2.1.0"
lazy_static = "1.4.0"

# [profile.dev.package.image]
# opt-level = 2

[profile.release]
lto = "fat"
